# cpp-composed-predicate

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.rst
include/predicate/: composed_predicate.hpp
test/: CMakeLists.txt
test/src/: boost_composed_predicate_test.cpp  composed_predicate_test.cpp  cpp11_composed_predicate_test.cpp  person.hpp
